diesel_compile_tests/tests/fail/eq_any_is_nullable.stderr
error[E0277]: cannot deserialize a value of the database type `diesel::sql_types::Nullable<Bool>` as `bool`
    --> tests/fail/eq_any_is_nullable.rs:18:15
     |
18   |         .load(&mut conn)
     |          ---- ^^^^^^^^^ the trait `FromSql<diesel::sql_types::Nullable<Bool>, Pg>` is not implemented for `bool`
     |          |
     |          required by a bound introduced by this call
     |
     = note: double check your type mappings via the documentation of `diesel::sql_types::Nullable<Bool>`
     = help: the following other types implement trait `FromSql<A, DB>`:
               `bool` implements `FromSql<Bool, Mysql>`
               `bool` implements `FromSql<Bool, Pg>`
               `bool` implements `FromSql<Bool, Sqlite>`
     = note: required for `bool` to implement `Queryable<diesel::sql_types::Nullable<Bool>, Pg>`
     = note: required for `bool` to implement `FromSqlRow<diesel::sql_types::Nullable<Bool>, Pg>`
     = note: required for `diesel::sql_types::Nullable<Bool>` to implement `load_dsl::private::CompatibleType<bool, Pg>`
     = note: required for `SelectStatement<FromClause<table>, SelectClause<Grouped<...>>>` to implement `LoadQuery<'_, diesel::PgConnection, bool>`
note: required by a bound in `diesel::RunQueryDsl::load`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
     |        ---- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`
  
     For more information about this error, try `rustc --explain E0277`.
